Prepare Changes and README files for upcoming release.

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Dancer::Plugin::Interchange6 - Interchange6 Shop Plugin for Dancer
 
 VERSION
-    Version 0.071
+    Version 0.080
 
 REQUIREMENTS
     All Interchange6 Dancer applications need to use the
@@ -13,6 +13,14 @@ REQUIREMENTS
 
        set session => 'DBIC';
        set session_options => {schema => schema};
+
+CONFIGURATION
+    The plugin caches carts by default in a Dancer named 'ic6_carts'. The
+    name of this var can be configured thus:
+
+      plugins:
+        Interchange6:
+          carts_var_name: some_other_var
 
 ROUTES
     You can use the Dancer::Plugin::Interchange6::Routes plugin bundled with
@@ -48,6 +56,14 @@ ROUTES
 KEYWORDS
   shop_cart
     Returns Dancer::Plugin::Interchange6::Cart object.
+
+    If you wish to subclass the cart you can have shop_cart return your
+    subclassed cart instead. You set the cart class via the following
+    example config snippet:
+
+      plugins:
+        Interchange6:
+          carts_var_name: MyApp::Cart
 
   shop_charge
     Creates payment order and authorizes amount.
