--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,15 @@
 Revision history for Dancer::Plugin::Interchange6
 
+0.111 Wed Mar 16 14:48:26 2016 CET
+
+    [TESTS]
+
+    * Improve debug on failure in disabled_cart_and_checkout.t
+      (Peter Mottram).
+    * Fix POD coverage test (Peter Mottram).
+    * Force rounding in hook tests to avoid SQLite rounding errors
+      (Peter Mottram).
+
 0.110 Mon Mar 14 21:40:10 2016 CET
 
     [ENHANCEMENTS]
